tests/ui/error-emitter/multibyte-char-in-diagnostic-source-line.rs
//! Regression test for <https://github.com/rust-lang/rust/issues/44023>
pub fn main () {}

fn საჭმელად_გემრიელი_სადილი ( ) -> isize { //~ ERROR mismatched types
}
